# CodingPiratesOS

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  changelog  jenkins-cleanup.sh  start-build.sh
basics/auto/: build  config
basics/config/: build
basics/config/archives/: cpos.key  cpos.list  google-chrome.list  microsoft.list  mono-official-vs.list  spotify.key  spotify.list  unityhub.list  virtualbox.list  vscodium.list  winehq.list
basics/config/bootloaders/grub-pc/: grub.cfg
basics/config/bootloaders/isolinux/: live.cfg.in
basics/config/hooks/live/: 0100-fstab.hook.chroot  0400-dconf-update.hook.chroot  0410-set-timezone.hook.chroot  0410-update-python-alternative.hook.chroot  0420-install-danish-keymap.hook.chroot  0500-add-i386.hook.chroot  0510-disabe-dotnet-telemetry.hook.chroot  0510-fake-vscode.hook.chroot  0510-install-steam.hook.chroot  0510-install-vbox-guest.hook.chroot  0510-set-default-browser.hook.chroot  0610-add-user-to-docker-group.hook
basics/config/includes.chroot/etc/dconf/db/local.d/: gnome-desktop-background  gnome-desktop-interface  gnome-desktop-screensaver  gnome-login-screen-logo  gnome-session-timeout  gnome-shell  gnome-terminal  nemo-preferences
basics/config/includes.chroot/etc/dconf/profile/: user
basics/config/includes.chroot/etc/live/config.conf.d/: cpos-setup.conf  user-setup.conf
basics/config/includes.chroot/etc/profile.d/: configure-unityhub.sh  disable-gnome-welcome.sh  install-vscode-extensions.sh
basics/config/includes.chroot/etc/skel/.config/autostart/: keyring-login.desktop
basics/config/includes.chroot/etc/skel/.local/share/keyrings/: Standardnøglering.keyring  Standardnøglering_1.keyring  default  login.keyring  user.keystore
basics/config/includes.chroot/usr/share/codingpirates/scripts/: unlock-keyring.py
basics/config/includes.chroot/var/lib/AccountsService/users/: pirat
basics/config/package-lists/: cpos.list.chroot  danish-keys.list.chroot  desktop.list.chroot  dev-tools.list.chroot  firmware.list.chroot  games.list.chroot  microsoft.list.chroot  multimedia.list.chroot  python.list.chroot  ruby.list.chroot  standard.list.chroot  steam.list.chroot  system-tools.list.chroot  wine.list.chroot  wireshark.list.chroot
basics/config/preseed/: steamcmd.cfg.chroot  wireshark.cfg.chroot
data/: Firefox.desktop  Unity.desktop  live.list.chroot
data/Scratch3/: Dockerfile  Scratch3.desktop  docker-compose.yaml  scratch3.sh  scratch3_svg.xcf
data/patch/: binary_rootfs  binary_rootfs.patch  debian-common  debian-common.patch
proxy/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  docker-initialize.sh  setup-proxy.sh
proxy/etc/apt/: apt.conf
proxy/etc/squid/: squid.conf
proxy/etc/squid/conf.d/: debian.conf
proxy/etc/ssl/: openssl.cnf
scripts/: build.sh  functions.sh  gen-usb-img.sh  get_extra_pkgs.py  get_vscodium_extensions.py  mkusb.sh  mount-ramfs.sh  old-build.sh  setup-local.sh  setup.sh  update_all.sh  update_arduino.sh  update_atom.sh  update_firefox.sh  update_java.sh  update_scratch3.sh  update_unity.sh
test/: docker-compose.yaml  requirements.txt  run-local.sh
test/app/: boot-firefox-shutdown.vdo  main.py  vncdowrap.py
test/apt/: Dockerfile  common.py  docker-run-archives.sh  docker-run-pkg-list.sh  docker-run.sh  requirements.txt  run-local.sh  test-archives.py  test-package-lists.py  test-pkg-lists.py
test/e2e/: Dockerfile  docker-compose.yaml  requirements.txt
test/e2e/app/scenarios/: boot.py  boot.sh  boot.vdo
test/e2e/qemu/: Dockerfile
test/qemu/: docker-run.sh
tools/: disktool.py
tools/disktool/: .gitignore  .project  configure.ac
tools/disktool/src/: AssistantConfigPage.cpp  AssistantConfigPage.h  AssistantConfirmPage.cpp  AssistantConfirmPage.h  AssistantPage.cpp  AssistantPage.h  AssistantProgressPage.cpp  AssistantProgressPage.h  AssistantSourcePage.cpp  AssistantSourcePage.h  AssistantSummaryPage.cpp  AssistantSummaryPage.h  DiskTool.cpp  DiskTool.h  DriveAssistant.cpp  DriveAssistant.h  DriveDetailBox.cpp  DriveDetailBox.h  DriveInfo.cpp  DriveInfo.h  DriveTool.cpp  DriveTool.h  DriveTreeView.cpp  DriveTreeView.h  ImageDownloader.cpp  ImageDownloader.h  MainWindow.cpp  MainWindow.h  Makefile.am  WebWorker.cpp  WebWorker.h  content.xml  dists.html  main.cpp  org.cpos.disktool.gschema.xml  toobar_buttons.h  ui.gresource.xml  ui.xml  ui_resources.c
tools/disktool/src/ui/: AssistPageConfig.glade  AssistPageConfirm.glade  AssistPageProgress.glade  AssistPageSource.glade  AssistPageSummary.glade  DriveDetailBox.glade  FormatAssistant.glade  Toolbar.glade
tools/disktool/tests/: Makefile.am  test  test.cpp
